# WulfRNA

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  rnaseq-run
.github/workflows/: ci.yml
docs/: spec.md
docs/decisions/: 0001-star-as-optional-aligner.md
scripts/: build_gene_annotation.py
src/wulfrna/: __init__.py  cli.py  io.py  pipeline.py
tests/: test_aggregation.py  test_build_gene_annotation.py  test_cli.py  test_provenance.py  test_reference_validation.py  test_star_integration.py
