[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wulfrna"
version = "0.2.1"
description = "A lightweight command-line pipeline for bulk RNA-seq preprocessing, transcript quantification, gene-level aggregation, quality control, and optional STAR alignment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fuki Kudoh" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
wulfrna = "wulfrna.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
